--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
+    <link rel="preconnect" href="https://preact-w3idpwa.firebaseapp.com/">
     <% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
         <meta name="theme-color" content="<%= htmlWebpackPlugin.options.manifest.theme_color %>">
         <% } %>
